--- a/web/CreateAccount.xhtml
+++ b/web/CreateAccount.xhtml
@@ -75,7 +75,7 @@ and open the template in the editor.
             </b:container>
         </h:form>
         <b:navBar fixed="bottom" class="text-center">
-        <h4 style="text-align:center">Hello from Think Inc.</h4>
+        <h4 style="text-align:center">@2016 Think Inc.</h4>
         </b:navBar>
     </h:body>
 </html>
