--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -7,10 +7,10 @@
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Think Inc Manager</title>
+        <title>Think Inc</title>
     </h:head>
     <h:body>
-         <b:navBar fixed="top" class="text-center">
+        <b:navBar fixed="top" class="text-center">
           <h1 style="text-align:center">Hello from Think Inc.</h1>
         </b:navBar>
         <h:form>
@@ -52,7 +52,7 @@
         <b:image value="Possible Logo.png" name="Logo" height="250px" class="center-block" style="margin-top: 5%"/>
     </h:body>
     <b:navBar fixed="bottom" class="text-center">
-        <h4 style="text-align:center">Hello from Think Inc.</h4>
+        <h4 style="text-align:center">@2016 Think Inc.</h4>
     </b:navBar>
 </html>
 
