--- a/web/CreateTicket.xhtml
+++ b/web/CreateTicket.xhtml
@@ -55,7 +55,7 @@
 
                 <b:row style="margin-top:5% !important">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
-                        <b:commandButton   class="center-block" action="Projects" value="Back to Projects" look="danger" />
+                        <b:commandButton   class="center-block" action="Project" value="Back to Projects" look="danger" />
                     </b:column>
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
                         <b:commandButton  value="Create Ticket" action="#{tickets.createTicket('Project')}" class="center-block" look="danger" />
