--- a/web/Fail.xhtml
+++ b/web/Fail.xhtml
@@ -8,7 +8,7 @@
     </h:head>
     <h:body>
         <b:container>
-            <h:graphicImage value="/images/problem_donkey.jpg" />
+            <b:image value="images/problem_donkey.jpg" name="Logo" height="250px" class="center-block" style="margin-top: 5%"/>
         </b:container>
     </h:body>
 </html>
