--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -3,13 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:b="http://bootsfaces.net/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
         <title>Think Inc</title>
     </h:head>
     <h:body>
+        <c:if test="#{login.isLoggedIn}">
+            <p>You are already logged in</p>
+        </c:if>
+        <c:otherwise>
+
         <h:form>
             <b:container>
                 <b:navBar fixed="top" class="text-center">
@@ -44,12 +49,13 @@
                         <b:commandButton  value="Sign In" action="#{login.doLogin()}" class="center-block" look="danger"/>
                     </b:column>
                     <b:column  tiny-screen="2" medium-screen="2" large-screen="2" offset="3" style="padding-right: 0 !important; margin-left: 0 !important">
-                        <b:commandButton  value="Sign Up" action="CreateAccount" class="center-block" look="danger"/>
+                        <b:commandButton  value="Sign Up" action="#{navigation.goToSignUp()}" class="center-block" look="danger"/>
                     </b:column>
                 </b:row>
             </b:container>
-        </h:form>   
-        <b:image value="Possible Logo.png" name="Logo" height="250px" class="center-block" style="margin-top: 5%"/>
+        </h:form>
+        </c:otherwise>
+        <b:image value="Logo.png" name="Logo" height="250px" class="center-block" style="margin-top: 5%"/>
     </h:body>
     <b:navBar fixed="bottom" class="text-center">
         <h4 style="text-align:center">@2016 Think Inc.</h4>
