Added edit user method and jsf page

--- a/web/Account.xhtml
+++ b/web/Account.xhtml
@@ -31,7 +31,7 @@ and open the template in the editor.
                             <li>
                                 <b:row style="margin-top:5% !important">
                                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="0" style="padding-right: 0 !important">
-                                        <b:commandButton look="danger" value="Edit" class="center-block" style="margin-top:1% !important; float: left !important;"/>
+                                        <b:commandButton look="danger" value="Edit" action="#{navigation.goToEditUser()}" class="center-block" style="margin-top:1% !important; float: left !important;"/>
                                     </b:column>
                                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="1" style="padding-right: 0 !important">
                                         <b:commandButton look="danger" value="DELETE USER" action="#{users.destroyRedirect()}" class="center-block" style="margin-top:1% !important; float: left !important;"/>
