Added edit project

--- a/web/EditAccount.xhtml
+++ b/web/EditAccount.xhtml
@@ -14,7 +14,7 @@ and open the template in the editor.
     </h:head>
     <h:body>
          <b:navBar fixed="top" class="text-center">
-          <h1 style="text-align:center">Account Creation</h1>
+          <h1 style="text-align:center">Edit User</h1>
         </b:navBar>
         <h:form>
             <b:container>
