--- a/web/Ticket.xhtml
+++ b/web/Ticket.xhtml
@@ -8,42 +8,54 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:b="http://bootsfaces.net/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Think Inc Manager</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <h:body>
         <h:form>
-        <b:container>
-            <b:navBar fixed="top" class="text-center">
-                     <h1 style="text-align:center">Ticket # #{tickets.currentTicket.id}</h1>
-            </b:navBar>
-            <b:row style="margin-top: 20%">                
-                <b:column tiny-screen="12" medium-screen="12" large-screen="12">
-                    <ul style="list-style-type: none; border: 2px solid black;">
-                        <h4 style="margin-top: 2%">Ticket Description:</h4>
-                        <li>#{tickets.currentTicket.description}</li>
-                        <li style="margin-bottom: 2%">Project Name: #{projects.currentProject.projectName}</li>
-                        <li style="margin-bottom: 2%">Ticket Is Open: #{tickets.currentTicket.open}</li>
-                        <b:commandButton  value="RESOLVE TICKET" action="#{tickets.destroyRedirect()}" class="center-block" look="danger" style="margin-top: 2%"/>
+            <b:container>
+                <b:navBar fixed="top" class="text-center">
+                    <h1 style="text-align:center">Ticket # #{tickets.currentTicket.id}</h1>
+                </b:navBar>
+
+                <b:row style="margin-top: 20%; border: 2px solid #19334d; background-color: #4E5D6C; padding: 2%" >
+                    <b:column tiny-screen="6" medium-screen="6" large-screen="6">
+                        <ul style="list-style-type: none;">
+                            <h4 style="margin-top: 2%">Ticket Description:</h4>
+                            <li>#{tickets.currentTicket.description}</li>
+                            <li style="margin-bottom: 2%">Project Name: #{projects.currentProject.projectName}</li>
+                            <li style="margin-bottom: 2%">Ticket Is Open: #{tickets.currentTicket.open}</li>
+                            <b:commandButton  value="RESOLVE TICKET" action="#{tickets.destroyRedirect()}"  look="danger" style="margin-top: 2%; margin-bottom: 3%"/>
+                        </ul>
+                    </b:column>
+                    <b:column tiny-screen="4" medium-screen="4" large-screen="4" style="margin-top: 2%">
+                        <b:selectOneMenu value="#{users.getUser(id)}" style="background-color: #0c1a27" >
+                            <ui:repeat var="u" value="#{users.users}" >
+                                <f:selectItem itemLabel="#{u.email}" itemValue="#{u.id}"/>
+                            </ui:repeat>  
+                        </b:selectOneMenu>
+                        <b:commandButton value="Add User" action="#{u.email}" look="danger" />
+                    </b:column>
+                </b:row>
+                <b:row style="margin-top: 4%; border: 2px solid #19334d; background-color: #4E5D6C">
+                    <ul style="list-style-type: none; margin-top: 1%">
+                        <li style="font-weight: bold;">Users on this Ticket: </li>
+                        <ui:repeat var="u" value="#{ticket.currentTicket.users}">
+                            <li style="border: 1px solid black"><h:commandLink action="#{u.email}">#{u.firstNameLastName()} #{u.email}</h:commandLink></li>
+                        </ui:repeat>
                     </ul>
-                </b:column>
-            </b:row>
-            <ul style="list-style-type: none;">
-                    <li style="font-weight: bold;border: 1px solid black">Users on this Ticket: </li>
-                    <ui:repeat var="u" value="#{ticket.currentTicket.users}">
-                        <li style="border: 1px solid black"><h:commandLink action="#{u.email}">#{u.firstNameLastName()} #{u.email}</h:commandLink></li>
-                    </ui:repeat>
-                   </ul>
-            <b:row>
-                <b:column tiny-screen="12" medium-screen="12" large-screen="12">
-                    <b:commandButton  value="Back to Account" action="Account" class="center-block"  look="danger" style="margin-top: 2%"/>
-                    <b:commandButton  value="Back to Project" action="Project" class="center-block" look="danger" style="margin-top: 2%"/>
-                    <b:commandButton  value="DELETE TICKET" action="#{tickets.destroyRedirect()}" class="center-block" look="danger" style="margin-top: 2%"/>
-                </b:column>
-            </b:row>
-        </b:container>
-         </h:form>
+                </b:row>
+                <b:row>
+                    <b:column tiny-screen="12" medium-screen="12" large-screen="12">
+                        <b:commandButton  value="Back to Account" action="Account" class="center-block"  look="danger" style="margin-top: 2%"/>
+                        <b:commandButton  value="Back to Project" action="Project" class="center-block" look="danger" style="margin-top: 2%"/>
+                        <b:commandButton  value="DELETE TICKET" action="#{tickets.destroyRedirect()}" class="center-block" look="danger" style="margin-top: 2%"/>
+                    </b:column>
+                </b:row>
+            </b:container>
+        </h:form>
     </h:body>
 </html>
